# wasmgo-book

./: .gitignore
code/go/ch02/wasm.go/binary/: reader.go
code/rust/ch02/wasm-rust/: Cargo.toml
code/rust/ch02/wasm-rust/src/: main.rs
code/rust/ch02/wasm-rust/src/binary/: instructions.rs  mod.rs  module.rs  reader.rs  types.rs
code/rust/ch03/wasm-rust/: Cargo.toml
code/rust/ch03/wasm-rust/src/: main.rs
code/rust/ch03/wasm-rust/src/binary/: dumper.rs  errors.rs  instructions.rs  mod.rs  opcodes.rs  types.rs
