[package]
name = "wasm-rust"
version = "0.1.0"
authors = ["alpha"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
quick-error = "2.0.0"
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"
backtrace = "0.3"
